<resources>
    <string name="app_name">WorkManagerTask</string>
    <string name="hello">Hello,</string>
    <string name="hello_detail">Let\'s find your favorite movie</string>
    <string name="popular_title">Popular Movie</string>
    <string name="menu_favorite">Favorite</string>
    <string name="login_title_form">Login</string>
    <string name="login_description">Login to access you account</string>
    <string name="login_username_input_hint">Username</string>
    <string name="login_password_input_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_title_form">Register</string>
    <string name="register_description">Register your account here</string>
    <string name="register_username_input_hint">Username</string>
    <string name="register_password_input_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="register_email_input_hint">Email</string>
    <string name="register_password_confirm_input_hint">Password Confirmation</string>
    <string name="appbar_profile_title">Edit Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="button_save_update">Save</string>
    <string name="registration_success">Registration Success</string>
    <string name="update_success">Update Success</string>
    <string name="detail_overview_title">Overview</string>
    <string name="now_playing">Now Playing</string>
    <string name="release_label">Release</string>
    <string name="indonesian_lang">Indonesian</string>
    <string name="english_lang">English</string>
    <string name="pass_not_match">Confirmation Password doesn\'t match</string>
    <string name="required_field">This field is required</string>
    <string name="login_failed">Username or Password is wrong</string>
</resources>