<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/appbar_profile_title"
            app:titleCentered="true"
            app:navigationIcon="@drawable/ic_arrow_back"
            android:background="@color/medium_blue"
            app:menu="@menu/appbar_profile_menu" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/photoContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/medium_blue"
        app:layout_constraintTop_toBottomOf="@id/topAppBarContainer">
        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username_input_hint"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="#CC1C1C1C"
        app:boxStrokeColor="@color/description_color"
        android:layout_marginTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/photoContainer"
        app:layout_constraintLeft_toLeftOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_input_hint"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="#CC1C1C1C"
        app:boxStrokeColor="@color/description_color"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/usernameInputContainer"
        app:layout_constraintLeft_toLeftOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_input_hint"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="#CC1C1C1C"
        app:boxStrokeColor="@color/description_color"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailInputContainer"
        app:layout_constraintLeft_toLeftOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveUpdate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_save_update"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>